[package]
name = "pp-moneypool"
version = "0.1.0"
authors = ["JuanJakobo <34421964+JuanJakobo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = ">0.3.1"
mysql = ">20.0.1"
reqwest = ">0.11.1"
select = ">0.4.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
scraper = ">0.11.0"
chrono = ">0.4.10"